// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly - input 1`] = `
<DocumentFragment>
  .emotion-1 {
  outline: 2px solid transparent;
  outline-offset: 2px;
  font-size: inherit;
  font-weight: inherit;
  text-align: inherit;
  background: var(--colors-transparent);
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: var(--radii-md);
  -webkit-padding-start: 3px;
  padding-inline-start: 3px;
  -webkit-padding-end: 3px;
  padding-inline-end: 3px;
  -webkit-margin-start: -3px;
  margin-inline-start: -3px;
  -webkit-margin-end: -3px;
  margin-inline-end: -3px;
  width: var(--sizes-full);
}

.emotion-1:focus,
.emotion-1[data-focus] {
  box-shadow: var(--shadows-outline);
}

.emotion-1::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-1::-moz-placeholder {
  opacity: 0.6;
}

.emotion-1:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-1::placeholder {
  opacity: 0.6;
}

<div>
    <div
      class="emotion-0"
      data-chakra-component="CEditable"
    >
      <!---->
       
      <input
        class="emotion-1"
        data-chakra-component="CEditableInput"
        data-testid="input"
        id="editable-1"
        placeholder="Click to edit..."
        value="testing"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: inherit;
  font-weight: inherit;
  text-align: inherit;
  background: var(--colors-transparent);
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: var(--radii-md);
  -webkit-padding-start: 3px;
  padding-inline-start: 3px;
  -webkit-padding-end: 3px;
  padding-inline-end: 3px;
  -webkit-margin-start: -3px;
  margin-inline-start: -3px;
  -webkit-margin-end: -3px;
  margin-inline-end: -3px;
  cursor: text;
  display: inline-block;
}

<div>
    <div
      class="emotion-0"
      data-chakra-component="CEditable"
    >
      <span
        class="emotion-1"
        data-chakra-component="CEditablePreview"
        data-testid="preview"
        tabindex="0"
      >
        testing
      </span>
       
      <!---->
    </div>
  </div>
</DocumentFragment>
`;
